modified the step buttons to toggle the forms on click

--- a/src/index.html
+++ b/src/index.html
@@ -213,7 +213,7 @@
               <div class="step-two">
                 <div class="text">
                   <h3>Arcade (Monthly)</h3>
-                  <a href="#">Change</a>
+                  <button type="button" class="change">Change</button>
                 </div>
 
                 <div class="price">$9/mo</div>
